# lcsgame

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  ChangeLog  IDEAS  LINUX_README.txt  astyle.sh  config.h.cmake
art/: armors.xml  armsdealer.xml  clips.xml  deptstore.xml  items.xml  loot.xml  masks.xml  oubliette.xml  pawnshop.xml  sitemaps.txt  vehicles.xml  weapons.xml
dev/: book.cpp  compat.h  cpc.cpp  lawrefrence.cpp  lcsendian.cpp  locationtype.cpp  locationtype.h  maps.dam  maps.dam.bak  oldnotes.cpp
dev/json/: json-forwards.h  json.h  jsoncpp.cpp
src/: CMakeLists.txt  Makefile.am  common.h  compat.cpp  compat.h  configfile.cpp  configfile.h  cursesgraphics.cpp  cursesgraphics.h  cursesgraphics_test.c  cursesmovie.cpp  cursesmovie.h  dumpcaps.cpp  endian.cpp  externs.h  game.cpp  includes.h  lcsio-old.cpp  lcsio.cpp  lcsio.h  locationdef.h  vector.h
src/basemode/: activate.cpp  activate_sleepers.cpp  baseactions.cpp  basemode.cpp  liberalagenda.cpp  reviewmode.cpp
src/cmarkup/: Markup.cpp  Markup.h
src/combat/: chase.cpp  fight.cpp  flight.cpp  haulkidnap.cpp
src/common/: commonactions.cpp  commondisplay.cpp  consolesupport.cpp  creature.cpp  equipment.cpp  getnames.cpp  help.cpp  misc.cpp  stringconversion.cpp  translateid.cpp
src/creature/: creature.cpp  creature.h  creaturenames.cpp  creaturetype.cpp  creaturetype.h  creaturetypes.cpp  pool.cpp
src/daily/: activities.cpp  daily.cpp  date.cpp  interrogation.cpp  news.cpp  recruit.cpp  shopsnstuff.cpp  siege.cpp
src/items/: armor.cpp  armor.h  armortype.cpp  armortype.h  clip.cpp  clip.h  cliptype.cpp  cliptype.h  item.cpp  item.h  itemtype.cpp  itemtype.h  loot.cpp  loot.h  loottype.cpp  loottype.h  money.cpp  money.h  weapon.cpp  weapon.h  weapontype.cpp  weapontype.h
src/locations/: locations.cpp  locations.h  world.cpp
src/log/: log.cpp  log.h
src/monthly/: endgame.cpp  justice.cpp  lcsmonthly.cpp  monthly.cpp  politics.cpp  sleeper_update.cpp
src/news/: ads.cpp  filler.cpp  headline.cpp  layout.cpp  majorevent.cpp  news.cpp  news.h  newsfuncs.cpp  sex.cpp  squadstory_text.cpp
src/pdcurses/: curses.h
src/politics/: alignment.h  law.cpp  law.h  politics.cpp
src/sandbox/: creature_factory_test.cpp  creature_namegen_test.cpp  creature_test.cpp  creature_test.h  creature_type_test.cpp  globals.h  injury_test.h  location_test.h  saveload_boost.cpp  weapon.h
src/sitemode/: advance.cpp  map.cpp  mapspecials.cpp  miscactions.cpp  newencounter.cpp  shop.cpp  shop.h  sitedisplay.cpp  sitemap.cpp  sitemap.h  sitemode.cpp  stealth.cpp  talk.cpp
src/title/: highscore.cpp  initfile.cpp  locations.cpp  newgame.cpp  saveload.cpp  titlescreen.cpp  world.cpp
src/vehicle/: vehicle.cpp  vehicle.h  vehicletype.cpp  vehicletype.h
workspaces/: help.cpp
