set(lcs_SRC 
  basemode/activate.cpp
  basemode/activate_sleepers.cpp
  basemode/baseactions.cpp
  basemode/basemode.cpp
  basemode/liberalagenda.cpp
  basemode/reviewmode.cpp
  cmarkup/Markup.cpp
  combat/chase.cpp
  combat/fight.cpp
  combat/haulkidnap.cpp
  common/commonactions.cpp
  common/commondisplay.cpp
  common/consolesupport.cpp
  common/equipment.cpp
  common/getnames.cpp
  common/help.cpp
  common/misc.cpp
  common/stringconversion.cpp
  common/translateid.cpp
  compat.cpp
  configfile.cpp
  creature/creature.cpp
  creature/creaturenames.cpp
  creature/creaturetype.cpp
  creature/creaturetypes.cpp
  cursesgraphics.cpp
  cursesmovie.cpp
  daily/activities.cpp
  daily/daily.cpp
  daily/date.cpp
  daily/interrogation.cpp
  daily/recruit.cpp
  daily/shopsnstuff.cpp
  daily/siege.cpp
  game.cpp
  items/armor.cpp
  items/armortype.cpp
  items/clip.cpp
  items/cliptype.cpp
  items/item.cpp
  items/itemtype.cpp
  items/loot.cpp
  items/loottype.cpp
  items/money.cpp
  items/weapon.cpp
  items/weapontype.cpp
  lcsio.cpp
  locations/locations.cpp
  locations/world.cpp
  log/log.cpp
  monthly/endgame.cpp
  monthly/justice.cpp
  monthly/lcsmonthly.cpp
  monthly/monthly.cpp
  monthly/sleeper_update.cpp
  news/ads.cpp
  news/headline.cpp
  news/layout.cpp
  news/majorevent.cpp
  news/news.cpp
  news/squadstory_text.cpp
  politics/law.cpp
  politics/politics.cpp
  sitemode/advance.cpp
  sitemode/mapspecials.cpp
  sitemode/miscactions.cpp
  sitemode/newencounter.cpp
  sitemode/shop.cpp
  sitemode/sitedisplay.cpp
  sitemode/sitemap.cpp
  sitemode/sitemode.cpp
  sitemode/stealth.cpp
  sitemode/talk.cpp
  title/highscore.cpp
  title/initfile.cpp
  title/newgame.cpp
  title/saveload.cpp
  title/titlescreen.cpp
  vehicle/vehicle.cpp
  vehicle/vehicletype.cpp
)

add_executable(crimesquad ${lcs_SRC})
target_link_libraries(crimesquad ncurses)
